<resources>
    <string name="app_name">Assignement1</string>
    <string name="md_sazzadul_islam">Md. Sazzadul Islam</string>
    <string name="senior_engineer_solution_engineering">Senior Engineer, Solution Engineering</string>
    <string name="_880_167_4716980">+880 167 4716980</string>
    <string name="sazib66_gmail_com">sazib66@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="sadhinata_tower_dhaka">Sadhinata Tower, Dhaka</string>
</resources>