<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="370dp"
        android:layout_height="443dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#E8E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:autoLink="phone"
            android:clickable="true"
            android:contentDescription="@string/_880_167_4716980"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/_880_167_4716980"
            android:textColor="#222020"
            android:textColorLink="#353032"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView22"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="32dp"
            android:layout_height="24dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="33dp"
            android:contentDescription="@phone-icon"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:srcCompat="@android:drawable/stat_sys_speakerphone"
            app:tint="#E91E63" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@sazib"
            app:layout_constraintEnd_toStartOf="@+id/imageView19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="36dp"
            android:contentDescription="@bkash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/brand_logo" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="149dp"
            android:text="@string/md_sazzadul_islam"
            android:textAllCaps="true"
            android:textColor="#2B2929"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView19" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="88dp"
            android:text="@string/senior_engineer_solution_engineering"
            android:textColor="#C2185B"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="30dp"
            android:layout_height="29dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="26dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView22"
            app:srcCompat="@android:drawable/ic_dialog_email"
            app:tint="#D81B60" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="145dp"
            android:autoLink="email"
            android:contentDescription="@email"
            android:text="@string/sazib66_gmail_com"
            android:textColor="#222020"
            android:textColorLink="#1C1A1A"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView22"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="29dp"
            android:layout_height="26dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="27dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView23"
            app:srcCompat="@android:drawable/ic_dialog_map"
            app:tint="#D81B60" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="145dp"
            android:contentDescription="@location"
            android:text="@string/sadhinata_tower_dhaka"
            android:textColor="#222020"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView22"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>